--- a/Aug28_Python Review/python-review.ipynb
+++ b/Aug28_Python Review/python-review.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "fda2b5c7",
    "metadata": {},
    "outputs": [],
@@ -49,13 +49,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "3c50eb62",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The value of foo is 3 and its type is <class 'int'>\n",
+      "The value of bar is 3.14 and its type is <class 'float'>\n",
+      "The value of myname is Liam and its type is <class 'type'>\n"
+     ]
+    }
+   ],
    "source": [
     "# Code goes here\n",
-    "\n"
+    "foo = 3\n",
+    "bar = 3.14\n",
+    "myname = \"Liam\"\n",
+    "\n",
+    "print(f'The value of foo is {foo} and its type is {type(foo)}')\n",
+    "print(f'The value of bar is {bar} and its type is {type(bar)}')\n",
+    "print(f'The value of myname is {myname} and its type is {type}')\n",
+    "\n",
+    "                                                         \n"
    ]
   },
   {
@@ -75,12 +93,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "12ed19f2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "foo is less than bar\n",
+      "With 7\n",
+      "1 1\n",
+      "2 4\n",
+      "3 9\n",
+      "4 16\n",
+      "5 25\n",
+      "6 36\n",
+      "7 49\n",
+      "8 64\n",
+      "9 81\n",
+      "10 100\n",
+      "Without 7\n",
+      "1 1\n",
+      "2 4\n",
+      "3 9\n",
+      "4 16\n",
+      "5 25\n",
+      "6 36\n",
+      "8 64\n",
+      "9 81\n",
+      "10 100\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code goes here"
+    "# Code goes here\n",
+    "if foo < bar:\n",
+    "    print(f'foo is less than bar')\n",
+    "else:\n",
+    "    print(f'foo is not less than bar')\n",
+    "\n",
+    "print('With 7')\n",
+    "for i in range(1,11):\n",
+    "    print(i,i**2)\n",
+    "\n",
+    "print('Without 7')\n",
+    "for i in range(1,11):\n",
+    "    if i == 7:\n",
+    "        continue\n",
+    "    print(i,i**2)\n",
+    "\n"
    ]
   },
   {
@@ -99,14 +161,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "903c54f5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 is prime\n",
+      "2 is prime\n",
+      "3 is prime\n",
+      "4 is not prime\n",
+      "5 is prime\n",
+      "6 is not prime\n",
+      "7 is prime\n",
+      "8 is not prime\n",
+      "9 is not prime\n",
+      "10 is not prime\n",
+      "11 is prime\n",
+      "12 is not prime\n",
+      "13 is prime\n",
+      "14 is not prime\n",
+      "15 is not prime\n",
+      "16 is not prime\n",
+      "17 is prime\n",
+      "18 is not prime\n",
+      "19 is prime\n",
+      "20 is not prime\n"
+     ]
+    }
+   ],
    "source": [
     "def isPrime(num: int) -> bool: # Notice how here I've specified that the input should be an int and the return value should be a bool\n",
-    "    return True # Remove this line.  Right now, the function thinks all numbers are prime!\n",
-    "    # code goes here"
+    "    for i in range(2, int(sqrt(num)) + 1): \n",
+    "        if num % i == 0:\n",
+    "            return False\n",
+    "    return True\n",
+    "for i in range(1,21):\n",
+    "    if isPrime(i):\n",
+    "        print(f'{i} is prime')\n",
+    "    else:\n",
+    "        print(f'{i} is not prime')"
    ]
   },
   {
@@ -127,27 +223,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "id": "af918624",
    "metadata": {},
    "outputs": [],
    "source": [
     "class Vertex:\n",
     "    def __init__(self, xcoord, ycoord):\n",
-    "        # code goes here\n",
-    "        pass # remove this line\n",
+    "        self.x = xcoord\n",
+    "        self.y = ycoord\n",
     "\n",
     "\n",
     "def Distance(v1: Vertex, v2: Vertex):\n",
-    "    return 5\n",
+    "    return sqrt((v1.x - v2.x)**2 + (v1.y - v2.y)**2)\n",
     "\n",
     "\n",
     "class Triangle:\n",
-    "    def __init__(self, otherstufftofill):\n",
+    "    def __init__(self, vertex1,vertex2,vertex3):\n",
+    "        self.v1 = vertex1\n",
+    "        self.v2 = vertex2\n",
+    "        self.v3 = vertex3\n",
     "        pass \n",
     "\n",
     "    def area(self):\n",
-    "        return 1\n",
+    "        s = .5*(Distance(self.v1,self.v2) + Distance(self.v2,self.v3) + Distance(self.v3,self.v1))\n",
+    "        return sqrt(s*(s-Distance(self.v1,self.v2))*(s-Distance(self.v2,self.v3))*(s-Distance(self.v3,self.v1)))\n",
     "    "
    ]
   },
@@ -161,13 +261,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "a741e0a9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "6.0\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code goes here\n"
+    "# Code goes here\n",
+    "vertex1 = Vertex(0,0)\n",
+    "vertex2 = Vertex (3,0)\n",
+    "vertex3 = Vertex(0,4)\n",
+    "\n",
+    "triangle = Triangle(vertex1,vertex2,vertex3)\n",
+    "\n",
+    "print(triangle.area())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af0696c1",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -186,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.4"
+   "version": "3.12.7"
   }
  },
  "nbformat": 4,
